<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.inventoryapp.EditorActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:id="@+id/activity_editor"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/editor_activity_left_padding"
            android:paddingRight="@dimen/editor_activity_right_padding"
            android:paddingTop="@dimen/editor_activity_top_padding">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/editor_Activity_padding_between_two_horizontal_views"
                android:text="@string/inventory_name_text"
                android:textStyle="bold" />

            <EditText
                android:hint="@string/editor_activity_name_hint"
                android:id="@+id/inventory_name_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/editor_activity_left_padding"
            android:paddingRight="@dimen/editor_activity_right_padding"
            android:paddingTop="@dimen/editor_activity_top_padding">

            <ImageView
                android:id="@+id/inventory_image"
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:paddingRight="@dimen/editor_Activity_padding_between_two_horizontal_views"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/add_image_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:onClick="addInventoryImageButtonClick" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/editor_activity_left_padding"
            android:paddingRight="@dimen/editor_activity_right_padding"
            android:paddingTop="@dimen/editor_activity_top_padding">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/editor_Activity_padding_between_two_horizontal_views"
                android:text="@string/editor_activity_price_text"
                android:textStyle="bold" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/editor_activity_dollar_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inventory_price_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:text="@string/editor_activity_default_price_text" />

        </LinearLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/editor_activity_left_padding"
            android:paddingRight="@dimen/editor_activity_right_padding"
            android:paddingTop="@dimen/editor_activity_top_padding">

            <TextView
                android:id="@+id/inventory_stock_text"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/editor_Activity_padding_between_two_horizontal_views"
                android:text="@string/inventory_stock_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inventory_stock_editText"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/inventory_stock_text"
                android:layout_width="16dp"
                android:text="@string/default_stock"
                android:textColor="@color/text_view_color" />

            <LinearLayout
                android:id="@+id/up_down_button_for_stock_items"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/inventory_stock_editText"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:scaleX="0.75"
                android:scaleY="0.75">

                <Button
                    android:id="@+id/up_button_for_stock_items"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="stockUpButtonClick"
                    android:text="@string/upButton_text" />

                <Button
                    android:id="@+id/down_button_for_stock_items"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="stockDownButtonClick"
                    android:text="@string/downButton_text" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/editor_activity_left_padding"
            android:paddingRight="@dimen/editor_activity_right_padding"
            android:paddingTop="@dimen/editor_activity_top_padding">

            <TextView
                android:id="@+id/inventory_sold_text"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/editor_Activity_padding_between_two_horizontal_views"
                android:text="@string/inventory_sold_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inventory_sold_editText"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/inventory_sold_text"
                android:layout_weight="3"
                android:layout_width="16dp"
                android:text="@string/default_sold"
                android:textColor="@color/text_view_color" />

            <LinearLayout
                android:id="@+id/up_down_button_for_sold_items"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/inventory_sold_editText"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:scaleX="0.75"
                android:scaleY="0.75">

                <Button
                    android:id="@+id/up_button_for_sold_items"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="soldUpButtonClick"
                    android:text="@string/upButton_text"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/down_button_for_sold_items"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="soldDownButtonClick"
                    android:text="@string/downButton_text"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/editor_activity_left_padding"
            android:paddingRight="@dimen/editor_activity_right_padding"
            android:paddingTop="@dimen/editor_activity_top_padding">

            <TextView
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/editor_Activity_padding_between_two_horizontal_views"
                android:text="@string/inventory_supplier_text"
                android:textStyle="bold" />

            <EditText
                android:hint="@string/url_hint"
                android:id="@+id/inventory_supplier_editText"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="match_parent" />

        </LinearLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:onClick="orderInventory"
            android:text="@string/order_from_supplier" />


    </LinearLayout>
</ScrollView>
